commit new changes

--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
                   The rocks pictured below include gastropods, bivalves, coral, microfossils, and geodes. They were all collected in a rock quarry in Newberry, located just west of Gainesville. Rock quarries in the area are an extremely valuable resource to local geologists.
                 </h2>
                 <div class="main-img">
-                  <img src="images/img1.jpg" id="current" />
+                  <img src="images/img1.JPG" id="current" />
                 </div>
 
                 <div class="imgs">
-                  <img src="images/img1.jpg" />
-                  <img src="images/img2.jpg" />
-                  <img src="images/img3.jpg" />
-                  <img src="images/img4.jpg" />
-                  <img src="images/img5.jpg" />
-                  <img src="images/img6.jpg" />
-                  <img src="images/img7.jpg" />
-                  <img src="images/img8.jpg" />
+                  <img src="images/img1.JPG" />
+                  <img src="images/img2.JPG" />
+                  <img src="images/img3.JPG" />
+                  <img src="images/img4.JPG" />
+                  <img src="images/img5.JPG" />
+                  <img src="images/img6.JPG" />
+                  <img src="images/img7.JPG" />
+                  <img src="images/img8.JPG" />
                 </div>
               </div>
             </div>
@@ -159,7 +159,7 @@
       <div class="container">
         <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 margin-bottom">
-            <img src="images/bison.jpg" alt="picture of a bison" />
+            <img src="images/bison.JPG" alt="picture of a bison" />
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <h2>Some species you'll find at Paynes Prairie</h2>
